--- a/mvt_digiprint_gui/Views/PrintQueueView/FileSettingsWeb.xaml
+++ b/mvt_digiprint_gui/Views/PrintQueueView/FileSettingsWeb.xaml
@@ -27,28 +27,28 @@
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
-        <GroupBox Style="{StaticResource MvtGroupBox}" Header="Settings" >
+        <Border BorderBrush="WhiteSmoke" BorderThickness="1">
         <StackPanel x:Name="Settings" Margin="0">
-       
-            <Grid Margin="5, 0, 5, 0" x:Name="Length_Settings">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140" />
-                    <ColumnDefinition Width="60" />
-                    <ColumnDefinition Width="70" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Row="0" Grid.Column="0" Text="Length"/>
+                <Grid Margin="5, 0, 5, 0" x:Name="Length_Settings">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="140" />
+                        <ColumnDefinition Width="60" />
+                        <ColumnDefinition Width="70" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Length"/>
                     <common:MvtNumBox Height="{Binding ElementName=RefNumBox, Path=ActualHeight}"  Grid.Row="0" Grid.Column="1" Text="{Binding ScanLength}" HorizontalAlignment="Right" Width="60" x:Name="LengthBox" Min="0"/>
 
                     <StackPanel  Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" Orientation="Horizontal">
                         <common:MvtRadioButton  Style="{StaticResource MvtSelectionRadioButton}"  Content="m"       Background="Transparent" IsChecked="{Binding LengthUnitMM}" x:Name="LengthUnit"/>
                         <common:MvtRadioButton  Style="{StaticResource MvtSelectionRadioButton}"  Content="copies"  Background="Transparent" IsChecked="{Binding LengthUnitCopies}" Last="True"/>
                     </StackPanel>
-            </Grid>
-
+                </Grid>
 
             <!-- Pages ___________________________________________________________________ -->
+            <uc:PlcTitle Header="Pages" Color="WhiteSmoke" Margin="0,-10"/>
             <Grid x:Name="Page_Settings" Margin="5, 10, 5, 5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="70" />
@@ -64,7 +64,6 @@
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Grid.Column="0" Text="Pages" Margin="0, 0, 0, 5"/>
                 <TextBlock Grid.Row="0" Grid.Column="1" Text="From" Margin="0, 0, 0, 5"/>
                 <common:MvtNumBox Grid.Row="0"  Grid.Column="2" Text="{Binding FirstPage}" HorizontalContentAlignment="Right" Min="0" IsInt="True" Margin="0, 0, 0, 5"/>
                 <TextBlock Grid.Row="0" Grid.Column="4" Text="To" Margin="0, 0, 0, 5"/>
@@ -90,107 +89,115 @@
                 </igWPF:XamComboEditor>
             </Grid>
 
+            <uc:PlcTitle Header="Start" Color="WhiteSmoke" Margin="0,-10"/>
             <!-- Start ___________________________________________________________________ -->
             <Grid x:Name="Start_Settings" Margin="5, 10, 5, 5" >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="70" />
-                    <ColumnDefinition Width="70" />
-                    <ColumnDefinition Width="60" />
-                    <ColumnDefinition Width="10" />
-                    <ColumnDefinition Width="60" />
-                    <ColumnDefinition Width="100" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-
-                <TextBlock Grid.Column="0" Text="Start"/>
-                <TextBlock Grid.Column="1" Text="Copy"/>
-                <common:MvtNumBox  Grid.Row="1" Grid.Column="2" Text="{Binding StartFrom}" Min="0" IsInt="True" x:Name="NumBox_StartFrom"/>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="70" />
+                        <ColumnDefinition Width="70" />
+                        <ColumnDefinition Width="60" />
+                        <ColumnDefinition Width="10" />
+                        <ColumnDefinition Width="60" />
+                        <ColumnDefinition Width="100" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="1" Text="Copy"/>
+                <common:MvtNumBox  Grid.Row="1" Grid.Column="2" Text="{Binding StartFrom}" Min="0" IsInt="True" x:Name="NumBox_StartFrom" HorizontalContentAlignment="Right"/>
                 <TextBlock Grid.Row="1" x:Name="StartPageTxt" Grid.Column="4" Text="Page" />
-                <common:MvtNumBox  Grid.Row="1"  x:Name="StartPageNum" Grid.Column="5" Text="{Binding StartPage}" />
+                <common:MvtNumBox  Grid.Row="1"  x:Name="StartPageNum" Grid.Column="5" Width="60" HorizontalAlignment="Left" Text="{Binding StartPage}" HorizontalContentAlignment="Right"/>
             </Grid>
 
-            <!-- RIP Settings _____________________________________________________________________________-->
-                <Grid Margin="5,10,5,5">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="140" />
-                        <ColumnDefinition Width="60" />
-                        <ColumnDefinition Width="170"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto" x:Name="SpeedHeight"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                    </Grid.RowDefinitions>
+            <uc:PlcTitle Header="Settings" Color="WhiteSmoke" Margin="0,-10"/>
 
-                    <TextBlock  Margin="0, 0, 0, 5" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="Print Environment" Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"/>
+                <!-- RIP Settings _____________________________________________________________________________-->
+            <Grid Margin="5,10,5,5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="140" />
+                    <ColumnDefinition Width="60" />
+                    <ColumnDefinition Width="70"/>
+                    <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto" x:Name="SpeedHeight"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+
+                <TextBlock  Margin="0, 0, 0, 5" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="Print Environment" Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"/>
+                <!--
+                <ig:XamComboEditor Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" Width="200" HorizontalAlignment="Left">
+                </ig:XamComboEditor>
+                -->
+                <ComboBox Margin="0, 0, 0, 5" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" HorizontalAlignment="Stretch"
+                    ItemsSource="{Binding PrintEnvList}"
+                    SelectedValue="{Binding PrintEnv}"
+                    Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"
+                />
+
+                <TextBlock Margin="0, 0, 0, 5" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="Orientation" Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"/>
+                <igWPF:XamComboEditor Margin="0, 0, 0, 5" Grid.Row="1" Grid.Column="1" 
+                    HorizontalAlignment="Stretch"
+                    ItemsSource="{Binding OrientationList}"
+                    Value="{Binding Orientation}"
+                    DisplayMemberPath="Display"
+                    ValuePath="Value" 
+                    DropDownResizeMode="None"
+                    Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"
+                    >
+                </igWPF:XamComboEditor>
+
+                <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="0, 0, 0, 5" Text="Speed"/>
+                <rx:RxComboBox x:Name="CB_Speed"
+                    Grid.Row="2" Grid.Column="1"
+                    SelectedValue="{Binding Speed}"
+                    HorizontalContentAlignment="Right" Margin="0, 0, 0, 5"
+                    />
+                <TextBlock  Margin="5, 0, 0, 5" Grid.Row="2" Grid.Column="2" Text="m/min" x:Name="SpeedUnit"/>
+
+                <TextBlock  Margin="0, 0, 0, 5"       Grid.Row="3" Grid.Column="0" Text="Image Margin" />
+                <common:MvtNumBox  x:Name="RefNumBox" Margin="0, 0, 0, 5"   Grid.Row="3" Grid.Column="1" Text="{Binding PageMargin, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right"/>
+                <StackPanel Grid.Row="3" Grid.Column="2" Orientation="Horizontal">
+                    <TextBlock  Margin="5, 0, 5, 5" Text="mm"  x:Name="MarginUnit"/>
+                    <TextBlock  Text="&#x0081;" FontFamily="Wingdings" />
+                </StackPanel>
+
+                <TextBlock Margin="0, 0, 0, 5" Grid.Row="4" Grid.Column="0" Text="PrintGo Mode" VerticalAlignment="Center"/>
+                <rx:RxComboBox Margin="0, 0, 0, 5" x:Name="CB_PrintGoMode"
+                    Grid.Row="4" Grid.Column="1"
+                    SelectedValue="{Binding PrintGoMode}"
+                    ImageBox="true"
+                    >
+                </rx:RxComboBox>
+                <common:MvtNumBox  Margin="5, 0, 0, 5"  Grid.Row="4" Grid.Column="2" Text="{Binding PrintGoDist, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right" Min="0"/>
+                <StackPanel  Grid.Row="4" Grid.Column="3" Orientation="Horizontal">
+                    <TextBlock Margin="5, 0, 5, 5" Text="mm" x:Name="DistUnit"/>
+                    <TextBlock Text="&#x0082;" FontFamily="Wingdings" />
+                </StackPanel>
+
                     <!--
-                    <ig:XamComboEditor Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" Width="200" HorizontalAlignment="Left">
-                    </ig:XamComboEditor>
-                    -->
-                    <ComboBox Margin="0, 0, 0, 5" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" HorizontalAlignment="Stretch"
-                        ItemsSource="{Binding PrintEnvList}"
-                        SelectedValue="{Binding PrintEnv}"
-                        Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"
+                <TextBlock   Margin="0, 0, 0, 5"   Grid.Row="5" Grid.Column="0" Text="Image Distance" />
+                <StackPanel  Grid.Row="5" Grid.Column="2" Orientation="Horizontal">
+                    <TextBlock Margin="5, 0, 5, 5" Text="mm" x:Name="DistUnit"/>
+                    <TextBlock Text="&#x0082;" FontFamily="Wingdings" />
+                </StackPanel>
+                -->
+                
+            </Grid>
+            <uc:PreviewWeb Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="5" 
+                    Width="350"
+                    Height="auto" MinHeight="130"
+                    HorizontalAlignment="Center" 
+                    Margin="0,5,0,0"
+                    Source="{Binding Preview}"
+                    Orientation="{Binding Orientation}"
+                    PrintGoMode="{Binding PrintGoMode}"
                     />
 
-                    <TextBlock Margin="0, 0, 0, 5" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="Orientation" Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"/>
-                    <igWPF:XamComboEditor Margin="0, 0, 0, 5" Grid.Row="1" Grid.Column="1" 
-                        HorizontalAlignment="Stretch"
-                        ItemsSource="{Binding OrientationList}"
-                        Value="{Binding Orientation}"
-                        DisplayMemberPath="Display"
-                        ValuePath="Value" 
-                        DropDownResizeMode="None"
-                        Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"
-                        >
-                    </igWPF:XamComboEditor>
-
-                    <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="0, 0, 0, 5" Text="Speed"/>
-                    <rx:RxComboBox x:Name="CB_Speed"
-                        Grid.Row="2" Grid.Column="1"
-                        SelectedValue="{Binding Speed}"
-                        HorizontalContentAlignment="Right" Margin="0, 0, 0, 5"
-                        />
-                    <TextBlock  Margin="5, 0, 0, 5" Grid.Row="2" Grid.Column="3" Text="m/min" x:Name="SpeedUnit"/>
-
-                    <TextBlock  Margin="0, 0, 0, 5"       Grid.Row="3" Grid.Column="0" Text="Image Margin" />
-                    <common:MvtNumBox  x:Name="RefNumBox" Margin="0, 0, 0, 5"   Grid.Row="3" Grid.Column="1" Text="{Binding PageMargin, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch"/>
-                    <StackPanel Grid.Row="3" Grid.Column="2" Orientation="Horizontal">
-                        <TextBlock  Margin="5, 0, 5, 5" Text="mm"  x:Name="MarginUnit"/>
-                        <TextBlock  Text="&#x0081;" FontFamily="Wingdings" />
-                    </StackPanel>
-
-                    <TextBlock Margin="0, 0, 0, 5" Grid.Row="4" Grid.Column="0" Text="PrintGo Mode" VerticalAlignment="Center"/>
-                    <rx:RxComboBox Margin="0, 0, 0, 5" x:Name="CB_PrintGoMode"
-                        Grid.Row="4" Grid.Column="1"
-                        SelectedValue="{Binding PrintGoMode}"
-                        ImageBox="true"
-                        >
-                    </rx:RxComboBox>
-
-                    <TextBlock   Margin="0, 0, 0, 5"   Grid.Row="5" Grid.Column="0" Text="Image Distance" />
-                    <common:MvtNumBox  Margin="0, 0, 0, 5"  Grid.Row="5" Grid.Column="1" Text="{Binding PrintGoDist, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch" Min="0"/>
-                    <StackPanel  Grid.Row="5" Grid.Column="2" Orientation="Horizontal">
-                        <TextBlock Margin="5, 0, 5, 5" Text="mm" x:Name="DistUnit"/>
-                        <TextBlock Text="&#x0082;" FontFamily="Wingdings" />
-                    </StackPanel>
-
-                </Grid>
-                <uc:PreviewWeb Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="5" 
-                        Width="250"
-                        Height="auto" MinHeight="130"
-                        HorizontalAlignment="Center" 
-                        Margin="0,5,0,0"
-                        Source="{Binding Preview}"
-                        Orientation="{Binding Orientation}"
-                        PrintGoMode="{Binding PrintGoMode}"
-                        />
-
             </StackPanel>
-        </GroupBox>
+        </Border>
     </Grid>
 
 </UserControl>
