--- a/mvt_digiprint_gui/Views/PrintSystemView/InkSupplyView.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemView/InkSupplyView.xaml
@@ -213,7 +213,7 @@
             </rx:RxPopup>
 
             <TextBlock Grid.Row="4"  Margin="2,0,4,0" HorizontalAlignment="Right" Text="{Binding PresLung, Converter={StaticResource HeadVal_Converter}}" x:Name="TX_LungPressure"/>
-            <Rectangle  Margin="2,0,2,0" Grid.Row="5" Fill="Gold" Visibility="{Binding TempReady, Converter={StaticResource BoolToInVisible_Converter}}"/>
+            <Rectangle  Margin="2,0,2,0" Grid.Row="5" Fill="{StaticResource RX.Warn}" Visibility="{Binding TempReady, Converter={StaticResource BoolToInVisible_Converter}}"/>
             <StackPanel  Margin="2,0,2,0" Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
                 <TextBlock VerticalAlignment="Center" Text="{Binding Temp,  Converter={StaticResource HeadVal_ConverterTemp}}"/>
                 <TextBlock Text=" (" VerticalAlignment="Center"/>
@@ -221,7 +221,7 @@
                 <TextBlock Margin="0,0,2,0" Text=")" VerticalAlignment="Center"/>
             </StackPanel>
 
-            <Rectangle Margin="2,0,2,0" Grid.Row="6" Fill="Gold" Visibility="{Binding CondTempReady, Converter={StaticResource BoolToInVisible_Converter}}"/>
+            <Rectangle Margin="2,0,2,0" Grid.Row="6" Fill="{StaticResource RX.Warn}" Visibility="{Binding CondTempReady, Converter={StaticResource BoolToInVisible_Converter}}"/>
             <StackPanel  Margin="2,0,2,0" Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Right">
                 <TextBlock Text="{Binding CondTemp,      Converter={StaticResource HeadVal_ConverterTemp}}" />
                 <TextBlock Text=" (" VerticalAlignment="Center"/>
@@ -275,7 +275,7 @@
                     FontSize="15" 
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Center" 
-                    Foreground="Crimson" 
+                    Foreground="{StaticResource RX.Error}" 
                     FontWeight="Bold"
                     Visibility="{Binding Connected, Converter={StaticResource BoolToInVisible_Converter}}"
                     RenderTransformOrigin="0.5,0.5" >
