--- a/mvt_digiprint_gui/Views/PrintSystemView/PrintSystemView.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemView/PrintSystemView.xaml
@@ -115,7 +115,7 @@
 
                             <rxView:InkSupplyGrid x:Name="InkSupplyGrid"/>
                             <TextBlock x:Name="ChillerError" Text="Chiller not running" Visibility="{Binding Running, Converter={StaticResource BoolToInVisible_Converter}}"
-                                       Foreground="Crimson" FontWeight="Bold" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                       Foreground="{StaticResource RX.Error}" FontWeight="Bold" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Grid>
                     </GroupBox>
                 </ScrollViewer>
