--- a/mvt_digiprint_gui/Views/PrintSystemView/PrintHeadView.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemView/PrintHeadView.xaml
@@ -136,7 +136,7 @@
             </StackPanel>
 
             <Rectangle  Grid.Row="6" Margin="2,0,2,0"  Fill="{StaticResource RX.Warn}" Visibility="{Binding FlowFactorWarning, Converter={StaticResource BoolToVisible_Converter}}"/>
-            <TextBlock  Grid.Row="6" Margin="0,0,2,0"  HorizontalAlignment="Right"  Text="{Binding FlowFactor}" />
+            <TextBlock  Grid.Row="6" Margin="0,0,2,0"  HorizontalAlignment="Right"  Text="{Binding FlowFactor, Converter={StaticResource HeadVal_Converter}}" />
             <TextBlock  Grid.Row="7" Margin="0,0,2,0"  HorizontalAlignment="Right"  Text="{Binding Valve, Converter={StaticResource HeadValve_Converter}}" />
             <TextBlock  Grid.Row="8" Margin="0,0,2,0"  HorizontalAlignment="Right"  Text="{Binding PrintingTime}" />
             <StackPanel Grid.Row="9" Orientation="Horizontal" HorizontalAlignment="Right">
