--- a/mvt_digiprint_gui/Resources/XamGrid_Styles.xaml
+++ b/mvt_digiprint_gui/Resources/XamGrid_Styles.xaml
@@ -10,6 +10,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:AvalonLambdas="http://schemas.AvalonLambdas/AvalonLambdas"
     xmlns:rx="clr-namespace:RX_DigiPrint.Helpers"
+    xmlns:models="clr-namespace:RX_DigiPrint.Models"
     xmlns:converters="clr-namespace:RX_DigiPrint.Converters"
     xmlns:common="clr-namespace:RX_Common;assembly=rx_common_lib_cs"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -132,6 +133,18 @@
         <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
         <Setter Property="FontSize" Value="14"/>
     </Style>
+
+    <DataTemplate  x:Key="XamGridHeaderTemplate" >
+        <Grid HorizontalAlignment="Stretch">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="{Binding}" Margin="0,0,10,0"/>
+            <rx:MvtTextBox Text="{Binding Source={x:Static models:RxGlobals.FileNameFilter}, Path=Filter}" Grid.Column="1" MinWidth="100" TextChanged="{x:Static models:FileNameFilter.Changed}"/>
+        </Grid>
+    </DataTemplate>
+    
     <!-- _________________________ ExpansionIndicator __________________________________________ -->
     <!-- SOURCE F:\Compiler\Infragistics\2013.2\WPF\DefaultStyles\Windows\PrimitivesGeneric_Express.xaml -->
     <Style x:Key="XamGridExpansionIndicatorHeaderCellControl" TargetType="igPrim:ExpansionIndicatorHeaderCellControl" >
