--- a/mvt_digiprint_gui/Views/PrintQueueView/FileOpen.xaml
+++ b/mvt_digiprint_gui/Views/PrintQueueView/FileOpen.xaml
@@ -14,7 +14,7 @@
              d:DesignHeight="300" 
              d:DesignWidth="600"
              >
-   
+    
     <Grid Background="White" x:Name="MainGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -50,7 +50,7 @@
                 CellStyle="{DynamicResource XamGridCellControlStyle}"
                 HeaderStyle="{DynamicResource XamGridHeaderStyleSortable}"
                 AutoGenerateColumns="False"
-                RowHeight="Dynamic"
+                RowHeight="100"
                 Style="{DynamicResource XamGrid-WideScroll-Style}"
                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                 SelectedRowsCollectionChanged="DirGrid_SelectedRowsCollectionChanged"
@@ -87,17 +87,13 @@
                                 </Grid.ColumnDefinitions>
                                 <Image Source="{Binding FileType, Converter={StaticResource FileTypeImage_Converter}}" Visibility="{Binding FileTypeVisibility}" Height="32" />
 
-                                <common:MvtButton Margin="5" Grid.Column="0" Visibility="{Binding PrintButtonVisibility}"
-                              Click="Print_Clicked" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeL}"
-                              >
+                                <common:MvtButton Margin="5" Grid.Column="0" Visibility="{Binding PrintButtonVisibility}" Click="Print_Clicked" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeL}">
                                     <iconPacks:PackIconMaterial HorizontalAlignment="Stretch" VerticalAlignment="Center" 
                                             Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkIcon}" Width="20" Height="20" 
                                                 Kind="Printer"></iconPacks:PackIconMaterial>
                                 </common:MvtButton>
                                 
-                                <common:MvtButton Margin="5" Grid.Column="1" Visibility="{Binding DeleteButtonVisibility}"
-                              Click="Delete_Clicked" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeL}"
-                              >
+                                <common:MvtButton Margin="5" Grid.Column="1" Visibility="{Binding DeleteButtonVisibility}" Click="Delete_Clicked" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeL}">
                                     <iconPacks:PackIconMaterial HorizontalAlignment="Stretch" VerticalAlignment="Center" 
                                             Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkIcon}" Width="20" Height="20" 
                                                 Kind="Delete"></iconPacks:PackIconMaterial>
@@ -107,9 +103,15 @@
                         </DataTemplate>
                     </ig:TemplateColumn.ItemTemplate>
                 </ig:TemplateColumn>
-                <ig:TextColumn     Key="FileName"    HeaderText="File"    IsSortable="True"  Width="auto"  ValueConverter="{StaticResource FileName_Converter}" SortComparer="{StaticResource FileName_Comparer}"/>
-            <!--    <ig:TextColumn     Key="Time"        HeaderText="Date"    IsSortable="True"  Width="auto"  SortComparer="{StaticResource Date_Comparer}"/> -->
-                <ig:TemplateColumn Key="Time"        HeaderText="Date"    IsSortable="True"  Width="auto"  SortComparer="{StaticResource Date_Comparer}">
+                <ig:TextColumn     Key="FileName"    HeaderText="File" Width="auto" 
+                                   ValueConverter="{StaticResource FileName_Converter}"
+                                   IsSortable="False"    
+                                   SortComparer="{StaticResource FileName_Comparer}"
+                                   HeaderTemplate="{StaticResource XamGridHeaderTemplate}" 
+                                   >
+                </ig:TextColumn>
+                <!--    <ig:TextColumn     Key="Time"        HeaderText="Date"    IsSortable="True"  Width="auto"  SortComparer="{StaticResource Date_Comparer}"/> -->
+                <ig:TemplateColumn Key="Time"        HeaderText="Date"    IsSortable="False"  Width="auto"  SortComparer="{StaticResource Date_Comparer}">
                     <ig:TemplateColumn.ItemTemplate>
                         <DataTemplate>
                             <StackPanel>
