--- a/mvt_digiprint_gui/Views/PrintQueueView/FileOpen.xaml
+++ b/mvt_digiprint_gui/Views/PrintQueueView/FileOpen.xaml
@@ -1,19 +1,37 @@
 ﻿<UserControl x:Class="RX_DigiPrint.Views.PrintQueueView.FileOpen"
+
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:ig="http://schemas.infragistics.com/xaml"
-             xmlns:igWPF="http://schemas.infragistics.com/xaml/wpf"
-             xmlns:uc="clr-namespace:RX_DigiPrint.Views.UserControls"
              xmlns:common="clr-namespace:RX_Common;assembly=rx_common_lib_cs"
-             xmlns:rx="clr-namespace:RX_DigiPrint.Helpers;assembly=RX_DigiPrint"
+             xmlns:rx="clr-namespace:RX_DigiPrint.Helpers"
+             xmlns:models="clr-namespace:RX_DigiPrint.Models"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+             xmlns:local="clr-namespace:RX_DigiPrint.Views.PrintQueueView"
              mc:Ignorable="d"
              Loaded="UserControl_Loaded"
              d:DesignHeight="300" 
              d:DesignWidth="600"
              >
+    
+    <UserControl.Resources>
+        <ResourceDictionary>
+
+            <DataTemplate  x:Key="FileNameHeaderTemplate" >
+                <Grid HorizontalAlignment="Stretch">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="File" Margin="0,0,10,0"/>
+                    <rx:MvtTextBox Text="{Binding Source={x:Static models:RxGlobals.FileNameFilter}, Path=Filter}" Grid.Column="1" MinWidth="100"/>
+                    <!--<rx:MvtTextBox Text="{Binding Source={x:Static models:RxGlobals.FileNameFilter}, Path=Filter}" Grid.Column="1" MinWidth="100" TextChanged="{x:Static models:FileNameFilter.Changed}"/> -->
+                </Grid>
+            </DataTemplate>
+        </ResourceDictionary>
+    </UserControl.Resources>
     
     <Grid Background="White" x:Name="MainGrid">
         <Grid.RowDefinitions>
@@ -107,7 +125,7 @@
                                    ValueConverter="{StaticResource FileName_Converter}"
                                    IsSortable="False"    
                                    SortComparer="{StaticResource FileName_Comparer}"
-                                   HeaderTemplate="{StaticResource XamGridHeaderTemplate}" 
+                                   HeaderTemplate="{StaticResource FileNameHeaderTemplate}" 
                                    >
                 </ig:TextColumn>
                 <!--    <ig:TextColumn     Key="Time"        HeaderText="Date"    IsSortable="True"  Width="auto"  SortComparer="{StaticResource Date_Comparer}"/> -->
